--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,10 @@
 version: "3.8"
 services:
+  my-app:
+    image: my-app
+    restart: always
+    ports:
+      - 3000:3000
   mongodb:
     image: mongo
     restart: always
